--- a/public/css/style.css
+++ b/public/css/style.css
@@ -677,6 +677,13 @@ div.passport_img {
     margin-top: 10px;
 }
 
+.chromeframe {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+}
+
 /* --------- Clear Floated Elements --------- */
 .clear {
   clear: both;
